[package]
name = "chat"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
license = "MIT/Apache-2.0"

homepage = "https://github.com/brennie/chat"
repository = "https://github.com/brennie/chat.git"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "chat_common"
path = "src/common/lib.rs"

[dependencies]
futures = "0.1.21"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
slog = "2.2.3"
slog-async = "2.3.0"
slog-term = "2.4.0"
structopt = "0.2.8"
structopt-derive = "0.2.8"
tokio = "0.1.6"
tokio-io = "0.1.6"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json" }
